# fbsurvivor

./: .codebook.toml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Pipfile  README.md  _start-survivor  db.py  emailer.py  fbsurvivor.py  justfile  mypy.ini  prod.env  pyproject.toml  reminder.py  retired.py  run  settings.py  validators.py
.claude/: settings.json
.github/workflows/: ci.yml
.zed/: debug.json
dev/: init-db  initialize-db  run-mypy  update-packages
dev/checks/: tests
fbsurvivor/: settings.py  urls.py
fbsurvivor/core/: admin.py  forms.py  models.py  services.py  urls.py  views.py
fbsurvivor/core/migrations/: 0038_cachedboard.py  0039_remove_player_league_delete_league.py  0040_alter_week_lock_datetime_alter_week_week_num_board.py  0041_board_rank.py  0042_rename_rank_board_ranking.py  0043_delete_cachedboard.py  0044_emaillogrecord.py  0045_season_description.py  0046_season_is_live.py  0047_playerstatus_has_complete_picks_and_more.py  0048_remove_playerstatus_has_complete_picks_and_more.py  0049_magiclink_delete_tokenhash.py  0050_loggedouttokens.py  0051_loggedouttokens_created_at.py  0052_playerstatus_can_buy_back.py  (+2 more)
fbsurvivor/templates/: 404.html  base.html  board.html  confirm.html  error-board.html  error-buy-back.html  error-magic-link.html  error-pick.html  login-sent.html  login.html  magic-link-expired.html  manager-paid.html  manager-players.html  manager-results.html  manager.html  me.html  message.html  message_all.html  more.html  paid.html  payouts.html  pick-error.html  pick-locked.html  pick-submitted.html  pick.html  picks.html  player-buy-back.html  player-pay.html  player-play.html  players.html  reminders.html  results.html  rules-confirm.html  rules.html  seasons.html
infra/: deploy  restart-service
infra/server-config/: run-wsgi-server-fbsurvivor
queries/: current_players.sql  new_players.sql  non_returning_players.sql
requirements/: dev.txt  prod.txt
requirements/in/: base.in  dev.in  prod.in
scripts/: reminder  start  start_server  task_retired_picks  task_send_email_reminders  task_send_reminder  task_send_sms_reminders  task_update_retired  update_retired
server-config/: nginx.conf  run-wsgi-server-fbsurvivor
sql/: get_players.sql  get_players_wo_picks.sql  update_picks_seq.sql
static/css/: main.css
survive/: __init__.py  db.py  settings.py  survive.py  tasks.py  validators.py
survive/templates/: base.html  locked.html  results.html  user.html
survivor/: app.py  db.py  settings.py  tasks.py  validators.py
survivor/templates/: email.html  picks.html  rules.html
templates/: 404.html  base.html  board.html  boards.html  email.html  forgot-sent.html  forgot.html  index.html  not-confirmed.html  paid.html  pick.html  picks.html  rules.html  signup.html  user.html
uploads/: 20241_game_locks.txt  20241_weeks.txt  2024_game_locks.txt  2024_teams.txt  2024_weeks.txt  2025_game_locks.txt  2025_teams.txt  2025_weeks.txt
(+19 files in other folders)
