[project]
name = "fbsurvivor"
version = "3.0"
description = "Run an NFL Survivor Pool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django",
    "django-extensions",
    "django-htmlmin",
    "pyjwt",
    "python-decouple",
    "requests",
    "gunicorn",
    "psycopg[c]",
]

[dependency-groups]
dev = [
    "decouple-types",
    "django-debug-toolbar",
    "django-stubs",
    "django-types",
    "factory-boy",
    "ipython",
    "pytest",
    "pytest-django",
    "ty",
]

[tool.ruff]
line-length = 99
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.django-stubs]
django_settings_module = "fbsurvivor.settings"
